changing to virtual threads scenario 1